--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-modal": "^3.8.1",
+    "react-scrollbar": "^0.5.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
